[package]
name = "odrive-messages"
authors = ["Rao Zvorovski <rao.zvorovski@codeduf.eu>"]
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "Unofficial ODrive CAN bus message encoding and decoding"
repository = "https://github.com/raoz/odrive-messages"
keywords = ["odrive", "can", "motor", "brushless", "cansimple"]
categories = ["encoding", "science::robotics"]

[dependencies]
deku = "0.20"
embedded-can = "0.4.1"
